# safe_exchange

./: Cargo.toml  README.md
src/: lib.rs
src/examples/: main.glade  main.glade~  main.rs
src/sodiumoxide/: .gitignore  .travis.yml  AUTHORS  Cargo.toml  NON_SOURCE_CHANGES_FROM_DNAQ.diff  README.md  appveyor.yml
src/sodiumoxide/src/: lib.rs  newtype_macros.rs
src/sodiumoxide/src/crypto/: verify.rs
src/sodiumoxide/src/crypto/auth/: mod.rs
src/sodiumoxide/src/crypto/box_/: mod.rs
src/sodiumoxide/src/crypto/hash/: mod.rs
src/sodiumoxide/src/crypto/onetimeauth/: mod.rs
src/sodiumoxide/src/crypto/pwhash/: mod.rs
src/sodiumoxide/src/crypto/secretbox/: mod.rs
src/sodiumoxide/src/crypto/shorthash/: mod.rs
src/sodiumoxide/src/crypto/sign/: mod.rs
src/sodiumoxide/src/crypto/stream/: mod.rs
